<resources>
    <string name="app_name">GoogleMapProject</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Api key  -->
    <string name="api_key">AIzaSyCmOCkXSZSQTG5QC-xntQh4Rni9xqxNOSY</string>

    <!--    // Menu items-->
    <string name="history">History</string>
    <string name="tutorial_guide">Tutorial Guide</string>
    <string name="faq">FAQ</string>
    <string name="services">Services</string>
    <string name="settings">Settings</string>
    <string name="history2">History</string>
    <string name="history3">History</string>




    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>

    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>


</resources>
